--- a/src/qt/forms/chatwindow.ui
+++ b/src/qt/forms/chatwindow.ui
@@ -85,11 +85,8 @@
              <height>20</height>
             </size>
            </property>
-           <property name="styleSheet">
-            <string notr="true">border-radius:40px;border:1px solid grey</string>
-           </property>
            <property name="text">
-            <string>Click to connect</string>
+            <string>Connect</string>
            </property>
           </widget>
          </item>
@@ -106,14 +103,33 @@
            </property>
           </spacer>
          </item>
+         <item row="6" column="0">
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>10</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="7" column="0" colspan="2">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A few IRC commands :&lt;/p&gt;&lt;ul style=&quot;margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px; -qt-list-indent: 1;&quot;&gt;&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;/JOIN #channel &lt;span style=&quot; color:#9a9a9a;&quot;&gt;Join a channel&lt;/span&gt;&lt;/li&gt;&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;/NICK nickname &lt;span style=&quot; color:#9a9a9a;&quot;&gt;Change nickname&lt;/span&gt;&lt;/li&gt;&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;/PRIVMSG nickname message &lt;span style=&quot; color:#9a9a9a;&quot;&gt;Send PM &lt;/span&gt;&lt;/li&gt;&lt;li style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;If userlist gets buggy, switch tabs to fix&lt;/li&gt;&lt;/ul&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           </property>
+          </widget>
+         </item>
         </layout>
-        <zorder>layoutWidget</zorder>
+        <zorder>label_9</zorder>
         <zorder>editPseudo</zorder>
         <zorder>label_5</zorder>
         <zorder>buttonConnect</zorder>
         <zorder>label_10</zorder>
-        <zorder>horizontalSpacer</zorder>
-        <zorder>verticalSpacer</zorder>
+        <zorder>label</zorder>
        </widget>
       </item>
       <item row="0" column="1">
@@ -224,14 +240,10 @@
         <zorder>tab</zorder>
         <zorder>lineEdit</zorder>
         <zorder>userView</zorder>
-        <zorder>verticalLayoutWidget</zorder>
         <zorder>disconnect</zorder>
        </widget>
       </item>
      </layout>
-     <zorder>hide3</zorder>
-     <zorder>horizontalSpacer_5</zorder>
-     <zorder>splitter</zorder>
     </widget>
    </item>
   </layout>
