--- a/src/qt/forms/blockbrowser.ui
+++ b/src/qt/forms/blockbrowser.ui
@@ -44,7 +44,7 @@
       <item>
        <widget class="QLabel" name="blockHeader">
         <property name="text">
-         <string>Block Explorer </string>
+         <string>Block Explorer allows you to easily view information about the blocks and transactions created by DopeCoin.</string>
         </property>
        </widget>
       </item>
@@ -93,6 +93,9 @@
           <property name="text">
            <string>0</string>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item row="1" column="0">
@@ -122,6 +125,9 @@
           <property name="text">
            <string>0x0</string>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item row="2" column="0">
@@ -143,12 +149,18 @@
           <property name="text">
            <string>0</string>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item row="7" column="1">
          <widget class="QLabel" name="pawBox">
           <property name="text">
            <string>0000 KH/s</string>
+          </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
@@ -157,12 +169,18 @@
           <property name="text">
            <string>0</string>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item row="5" column="1">
          <widget class="QLabel" name="timeBox">
           <property name="text">
            <string>0</string>
+          </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
@@ -198,6 +216,9 @@
           <property name="text">
            <string>0x0</string>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item row="4" column="0">
@@ -211,6 +232,9 @@
          <widget class="QLabel" name="hardBox">
           <property name="text">
            <string>0.00</string>
+          </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
@@ -227,7 +251,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>30</height>
+          <height>26</height>
          </size>
         </property>
         <property name="text">
@@ -250,7 +274,7 @@
          </size>
         </property>
         <property name="inputMask">
-         <string comment="Transaction id" extracomment="Transaction id"/>
+         <string comment="Transaction ID" extracomment="Transaction ID"/>
         </property>
         <property name="placeholderText">
          <string comment="Transaction ID" extracomment="Transaction ID"/>
@@ -287,7 +311,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>30</height>
+          <height>26</height>
          </size>
         </property>
         <property name="text">
@@ -344,6 +368,9 @@
           <property name="text">
            <string>000</string>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
          </widget>
         </item>
         <item row="1" column="0">
@@ -357,6 +384,9 @@
          <widget class="QLabel" name="valueBox">
           <property name="text">
            <string/>
+          </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
@@ -372,6 +402,9 @@
           <property name="text">
            <string/>
           </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+          </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
           </property>
@@ -384,6 +417,9 @@
           </property>
           <property name="alignment">
            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+          </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
@@ -401,6 +437,9 @@
          <widget class="QLabel" name="feesBox">
           <property name="text">
            <string/>
+          </property>
+          <property name="textInteractionFlags">
+            <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
           </property>
          </widget>
         </item>
