--- a/src/qt/forms/blockbrowser.ui
+++ b/src/qt/forms/blockbrowser.ui
@@ -366,7 +366,7 @@
         <item row="0" column="1">
          <widget class="QLabel" name="txID">
           <property name="text">
-           <string>000</string>
+           <string>N/A</string>
           </property>
           <property name="textInteractionFlags">
             <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
