--- a/src/qt/forms/chatwindow.ui
+++ b/src/qt/forms/chatwindow.ui
@@ -150,22 +150,6 @@
          <property name="sizeConstraint">
           <enum>QLayout::SetDefaultConstraint</enum>
          </property>
-         <item row="3" column="0" colspan="2">
-          <widget class="QLineEdit" name="lineEdit">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16777215</width>
-             <height>30</height>
-            </size>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="1">
           <widget class="QListView" name="userView">
            <property name="sizePolicy">
@@ -236,11 +220,35 @@
            </property>
           </widget>
          </item>
+         <item row="3" column="0">
+          <widget class="QLineEdit" name="lineEdit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QPushButton" name="send">
+           <property name="text">
+            <string>Send</string>
+           </property>
+          </widget>
+         </item>
         </layout>
         <zorder>tab</zorder>
         <zorder>lineEdit</zorder>
         <zorder>userView</zorder>
         <zorder>disconnect</zorder>
+        <zorder>send</zorder>
        </widget>
       </item>
      </layout>
